refactor: modified swagger docs
